--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
         "zendframework/zendframework": ">2.2.0rc1",
         "zendframework/zend-developer-tools": "dev-master",
         "doctrine/common": ">=2.1",
-        "doctrine/doctrine-orm-module": "0.7.*"
+        "doctrine/doctrine-orm-module": "0.7.*",
+        "zf-commons/zfc-base": "v0.1.2",
+        "zf-commons/zfc-user": "dev-master",
+        "zf-commons/zfc-user-doctrine-orm": "dev-master",
+        "doctrine/doctrine-orm-module": "0.7.*",
+        "bjyoungblood/bjy-authorize": "1.4.*"
     }
 }
