--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,17 @@
         "zf2"
     ],
     "homepage": "http://framework.zend.com/",
+    "minimum-stability": "alpha",
     "require": {
-        "php": ">=5.3.3",
-        "zendframework/zendframework": ">2.2.0rc1",
+        "php": ">=5.4",
+        "zendframework/zendframework": "2.2.*",
         "zendframework/zend-developer-tools": "dev-master",
         "doctrine/common": ">=2.1",
         "doctrine/doctrine-orm-module": "0.7.*",
+        "murganikolay/doctrine-migrations-module": "dev-master",
         "zf-commons/zfc-base": "v0.1.2",
         "zf-commons/zfc-user": "dev-master",
         "zf-commons/zfc-user-doctrine-orm": "dev-master",
-        "doctrine/doctrine-orm-module": "0.7.*",
         "bjyoungblood/bjy-authorize": "1.4.*",
         "zf-commons/zfc-twig": "dev-master"
     }
